adv, login, profile, publish, search, user

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "koa-bodyparser": "*",
     "koa-mysql-session": "*",
     "koa-generic-session": "*",
+    "crypto-js": "*",
     "co-mysql": "*",
     "config": "*"
   },
